# JamIssue

./: .gitignore  README.md  package-lock.json  package.json
backend/: pyproject.toml  requirements.local.txt  worker_entry.py  wrangler.toml
backend/app/: config.py  db.py  db_models.py  jwt_auth.py  main.py  models.py  naver_oauth.py  public_event_api.py  public_event_models.py  repository.py  repository_normalized.py  repository_support.py  seed.py  seed_data.py  storage.py  user_routes.py  user_routes_normalized.py
backend/app/public_data/: client.py  event_client.py  event_normalizer.py  event_schemas.py  event_service.py  normalizer.py  schemas.py  service.py
backend/app/repositories/: __init__.py  base.py  place_repository.py  review_repository.py  stamp_repository.py  user_repository.py
backend/app/services/: __init__.py  account_service.py  admin_service.py  auth_service.py  page_service.py  place_service.py  review_service.py  route_service.py  stamp_service.py  upload_service.py  user_service.py
backend/sql/: schema.sql  supabase_schema.sql  supabase_seed.sql
backend/sql/migrations/: 20260318_stamp_session_refactor.sql  20260323_seed_sample_places.sql
backend/tests/: test_repository.py  test_review_service.py  test_services.py  test_user_routes.py
deploy/: wrangler.pages.toml
docs/: README.md  account-identity-schema.md  architecture-change-2026-03-16.md  cloudflare-pages-setup.md  community-routes.md  current-state-2026-03-19.md  deploy-secrets-checklist.md  deploy-secrets-detailed.md  deployment-change-2026-03-16.md  deployment-cloudflare.md  (+7 more)
(+67 files in other folders)
